--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,7 +52,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <img src="images/logo.svg" style="height: 100px" alt="Homepage">
             </a>
         </div>
 
@@ -61,7 +61,7 @@
                 <path
                     d="M0 12l11 3.1 7-8.1-8.156 5.672-4.312-1.202 15.362-7.68-3.974 14.57-3.75-3.339-2.17 2.925v-.769l-2-.56v7.383l4.473-6.031 4.527 4.031 6-22z" />
             </svg>
-            <a href="mailto:giovannilamarmora.working@gmail.com">giovannilamarmora.working@gmail.com</a>
+            <a href="https://giovannilamarmoraproject.github.io/Portfolio">giovannilamarmora</a>
         </div>
 
     </header> <!-- end s-header -->
@@ -83,15 +83,14 @@
                 <div class="intro-content__text">
 
                     <h3>
-                        Coming Soon
+                        Email Sender
                     </h3>
-
                     <h1>
-                        Get ready everyone. <br>
-                        We are currently <br>
-                        working on a super <br>
-                        awesome website.
+                        The Email Sender System is currently implemented on <a
+                            href="https://giovannilamarmoraproject.github.io/Portfolio">Portfolio</a> <br>
+                        Here you can find the <a href="#" onclick="getSwagger()">Swagger API</a> <br>
                     </h1>
+
 
                 </div> <!-- end intro-content__text -->
 
@@ -99,19 +98,28 @@
 
         </div> <!--  end intro-content -->
 
+        <script>
+            function getSwagger() {
+                return window.location.assign(window.location.origin + "/swagger-ui/index.html");
+            }
+        </script>
+
 
 
         <ul class="intro-social">
-            <li><a href="#0"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/gio.lamarmora"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="https://linktr.ee/giovannilamarmora"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/gio_lamarmora/"><i class="fab fa-instagram"
+                        aria-hidden="true"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/giovannilamarmora"><i class="fab fa-linkedin"
+                        aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/giovannilamarmora"><i class="fab fa-github" aria-hidden="true"></i></a></li>
         </ul> <!-- end intro social -->
 
         <div class="intro-scroll">
             <a href="#info" class="scroll-link smoothscroll">
-                Coming Soon
+                Email Sender
             </a>
         </div> <!-- end intro scroll -->
 
