feat(): Swagger Link

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -101,7 +101,7 @@
 
     <script>
         function getSwagger() {
-            return window.open(window.location.origin + "/swagger-ui/index.html");
+            return window.open(window.location.origin + "/email-sender/swagger-ui/index.html");
         }
     </script>
 
