Email Sender V1.0.0, Update Utils Upgrade Spring and Java

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icons/icon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/icon-72x72.png">
-    <link rel="manifest" href="site.webmanifest">
 
 </head>
 
@@ -52,7 +51,7 @@
 
     <div class="header-logo">
         <a class="site-logo" href="index.html">
-            <img src="images/logo.svg" style="height: 100px" alt="Homepage">
+            <img src="images/logo.png" style="height:100px; width:100px" alt="Homepage">
         </a>
     </div>
 
@@ -61,7 +60,7 @@
             <path
                     d="M0 12l11 3.1 7-8.1-8.156 5.672-4.312-1.202 15.362-7.68-3.974 14.57-3.75-3.339-2.17 2.925v-.769l-2-.56v7.383l4.473-6.031 4.527 4.031 6-22z"/>
         </svg>
-        <a target="_blank" href="https://giovannilamarmoraproject.github.io/Portfolio">giovannilamarmora</a>
+        <a target="_blank" href="https://giovannilamarmora.github.io/">giovannilamarmora</a>
     </div>
 
 </header> <!-- end s-header -->
@@ -87,7 +86,7 @@
                 </h3>
                 <h1>
                     The Email Sender System is currently implemented on <a target="_blank"
-                                                                           href="https://giovannilamarmoraproject.github.io/Portfolio">Portfolio</a>
+                                                                           href="https://giovannilamarmora.github.io">Portfolio</a>
                     <br>
                     Here you can find the <a target="_blank" href="#" onclick="getSwagger()">Swagger API</a> <br>
                 </h1>
@@ -101,7 +100,7 @@
 
     <script>
         function getSwagger() {
-            return window.open(window.location.origin + "/email-sender/swagger-ui/index.html");
+            return window.open(window.location.origin + "/webjars/swagger-ui/index.html");
         }
     </script>
 
