Email Sender, bump V1.0.17

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -88,7 +88,7 @@
                     The Email Sender System is currently implemented on <a target="_blank"
                                                                            href="https://giovannilamarmora.github.io">Portfolio</a>
                     <br>
-                    Here you can find the <a target="_blank" href="#" onclick="getSwagger()">Swagger API</a> <br>
+                    Here you can find the <a target="_blank" onclick="getSwagger()">Swagger API</a> <br>
                 </h1>
 
 
